--- a/FL12_HW1/homework/index.html
+++ b/FL12_HW1/homework/index.html
@@ -12,7 +12,6 @@
     <div id="main">
       <div id="container">
         <div id="content" role="main">
-          <!-- TODO: Content goes here -->
           <section id="home">
             <a href="http://www.epam.com/">
               <img src="logo.png" alt="epam">
@@ -138,10 +137,10 @@ both           <strong>spaces</strong> and
               <h3>Definition List</h3>
               <dl>
                 <dt>HTML</dt>
-                <dd>HTML is the standard markup language to create Web pages.</dd>
+                <dd>HTML is the standard markup language to create Web pages</dd>
 
                 <dt>CSS</dt>
-                <dd>CSS describes how HTML elements are to be displayed.</dd>
+                <dd>CSS describes how HTML elements are to be displayed</dd>
 
                 <dt>JavaScript</dt>
                 <dd>JavaScript is a scripting languages, primarily used on the Web.</dd>
