--- a/FL12_HW1/homework/index.html
+++ b/FL12_HW1/homework/index.html
@@ -12,6 +12,7 @@
     <div id="main">
       <div id="container">
         <div id="content" role="main">
+
           <section id="home">
             <a href="http://www.epam.com/">
               <img src="logo.png" alt="epam">
@@ -29,7 +30,6 @@
             </nav>
             <hr>
 
-
             <div>
               <p>Lorem ipsum dolor sit amet,
                 <a href="#">test link</a>
@@ -43,7 +43,8 @@
                 <cite>Time Magazine</cite>
                 (That’s a citation).
                 <u>Underline.</u>
-                Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.
+                Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam
+                sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.
                 <strong>I am strong.</strong></p>
 
               <p>Watch out for the abbreviations!
@@ -63,41 +64,42 @@
                 This <del>text</del> has been struck.</p>
               <hr>
             </div>
+          </section>
 
-            <section id="headings">
-              <p>h1 defines the most important heading. h6 defines the least
-                important heading. Font-size for h1 is the same as font-size for h2,
-                because we have to use only one h1 on the page, and it is commonly
-                used inside header</p>
+          <section id="headings">
+            <p>h1 defines the most important heading. h6 defines the least
+              important heading. Font-size for h1 is the same as font-size for h2,
+              because we have to use only one h1 on the page, and it is commonly
+              used inside header</p>
 
-              <h2>Heading 2</h2>
-              <h3>Heading 3</h3>
-              <h4>Heading 4</h4>
-              <h5>Heading 5</h5>
-              <h6>Heading 6</h6>
-              <hr>
-            </section>
+            <h2>Heading 2</h2>
+            <h3>Heading 3</h3>
+            <h4>Heading 4</h4>
+            <h5>Heading 5</h5>
+            <h6>Heading 6</h6>
+            <hr>
+          </section>
 
-            <section id="text">
-              <h2>Text formats</h2>
-              <h3>Article</h3>
-              <article>
-                <header>
-                  <h2>Article title</h2>
-                </header>
-                <p id="author-description">Article description</p>
-              </article>
+          <section id="text">
+            <h2>Text formats</h2>
+            <h3>Article</h3>
+            <article>
+              <header>
+                <h2>Article title</h2>
+              </header>
+              <p id="author-description">Article description</p>
+            </article>
 
-              <h3>Preformatted Text</h3>
-              <pre>Text in a <strong>pre</strong> element
+            <h3>Preformatted Text</h3>
+            <pre>Text in a <strong>pre</strong> element
 is displayed in a fixed-width
 font, and it preserves
 both           <strong>spaces</strong> and
 <strong>line breaks</strong>
           </pre>
 
-              <h3>This is code</h3>
-              <pre><code>
+            <h3>This is code</h3>
+            <pre><code>
 .flex {
   display: flex;
   justify-content: justify;
@@ -105,137 +107,129 @@ both           <strong>spaces</strong> and
 }
 
           </code></pre>
-            </section>
-
-            <section id="lists">
-              <h2>Unordered Wish List</h2>
-              <ul>
-                <li>Iphone 11 pro max</li>
-                <li>Books:
-                  <ul>
-                    <li>Clean code principles javascript</li>
-                    <li>You don't know JS</li>
-                    <li>Angular Pro</li>
-                  </ul>
-                </li>
-                <li>Headphones</li>
-              </ul>
-
-              <h2>Ordered Task List</h2>
-              <ol>
-                <li>Pay the bills</li>
-                <li>Refuel the car</li>
-                <li>Finish homework
-                  <ol>
-                    <li>Create HTML page according to the requirements</li>
-                    <li>Upload to the GitHub repository</li>
-                  </ol>
-                </li>
-                <li>Enjoy your day</li>
-              </ol>
-
-              <h3>Definition List</h3>
-              <dl>
-                <dt>HTML</dt>
-                <dd>HTML is the standard markup language to create Web pages</dd>
-
-                <dt>CSS</dt>
-                <dd>CSS describes how HTML elements are to be displayed</dd>
-
-                <dt>JavaScript</dt>
-                <dd>JavaScript is a scripting languages, primarily used on the Web.</dd>
-              </dl>
-
-              <span>Select for learning
-                <select>
-                  <option value="js">JS</option>
-                  <option value="html">HTML</option>
-                  <option value="css">CSS</option>
-                </select>
-              </span>
-              <hr>
-            </section>
-
-            <section id="table">
-              <hr>
-              <h2>Table</h2>
-              <table>
-                <thead>
-                  <tr>
-                    <th>Skill</th>
-                    <th>Training</th>
-                    <th>City</th>
-                  </tr>
-                </thead>
-                <tr>
-                  <td>JAVA</td>
-                  <td>JAVA development training</td>
-                  <td>Lviv</td>
-                </tr>
-                <tr>
-                  <td>JAVASCRIPT</td>
-                  <td>FRONT-END development</td>
-                  <td>Kharkiv</td>
-                </tr>
-                <tr>
-                  <td>IOS</td>
-                  <td>IOS winter 2019</td>
-                  <td>Kyiv</td>
-                </tr>
-                <tr>
-                  <td>DEVOPS</td>
-                  <td>DEVOPS spring 2020</td>
-                  <td>Dnipro</td>
-                </tr>
-              </table>
-            </section>
-
-            <section id="blockquotes">
-              <h2>Blockquotes</h2>
-              <p>Let’s keep it simple. Italics are good to help set it off from
-                the body text. Be sure to style the citation.</p>
-
-              <blockquote>
-                "So if you want to go fast, if you want to get done quickly,
-                if you want your code to be easy to write, make it easy to read."
-                <br>
-                <a href="#">Robert C. Martin (Uncle Bob)</a>
-              </blockquote>
-              <hr>
-            </section>
-
-
-            <form action="#" method="post">
-              <fieldset>
-                <label for="userName">Username:</label>
-                <input type="text" name="firstname" id="userName">
-                <!-- <br> -->
-              </fieldset>
-              <fieldset>
-                <label for="email">Email:</label>
-                <input type="email" name="email" id="email">
-                <!-- <br> -->
-              </fieldset>
-              <fieldset>
-                <label for="password">Password:</label>
-                <input type="number" name="password" id="password">
-                <!-- <br> -->
-              </fieldset>
-              <fieldset>
-                <textarea rows="4" cols="23"></textarea>
-                <!-- <br> -->
-              </fieldset>
-
-              <fieldset>
-                <button type="button" name="button">Submit</button>
-              </fieldset>
-              <!-- <button type="submit">Submit</button> -->
-            </form>
-
-            <footer>
-              <span>&copy; Copyright Epam Systems</span>
-            </footer>
           </section>
+
+          <section id="lists">
+            <h2>Unordered Wish List</h2>
+            <ul>
+              <li>Iphone 11 pro max</li>
+              <li>Books:
+                <ul>
+                  <li>Clean code principles javascript</li>
+                  <li>You don't know JS</li>
+                  <li>Angular Pro</li>
+                </ul>
+              </li>
+              <li>Headphones</li>
+            </ul>
+
+            <h2>Ordered Task List</h2>
+            <ol>
+              <li>Pay the bills</li>
+              <li>Refuel the car</li>
+              <li>Finish homework
+                <ol>
+                  <li>Create HTML page according to the requirements</li>
+                  <li>Upload to the GitHub repository</li>
+                </ol>
+              </li>
+              <li>Enjoy your day</li>
+            </ol>
+
+            <h3>Definition List</h3>
+            <dl>
+              <dt>HTML</dt>
+              <dd>HTML is the standard markup language to create Web pages</dd>
+
+              <dt>CSS</dt>
+              <dd>CSS describes how HTML elements are to be displayed</dd>
+
+              <dt>JavaScript</dt>
+              <dd>JavaScript is a scripting languages, primarily used on the Web.</dd>
+            </dl>
+
+            <span>Select for learning
+              <select>
+                <option value="js">JS</option>
+                <option value="html">HTML</option>
+                <option value="css">CSS</option>
+              </select>
+            </span>
+            <hr>
+          </section>
+
+          <section id="table">
+            <hr>
+            <h2>Table</h2>
+            <table>
+              <thead>
+                <tr>
+                  <th>Skill</th>
+                  <th>Training</th>
+                  <th>City</th>
+                </tr>
+              </thead>
+              <tr>
+                <td>JAVA</td>
+                <td>JAVA development training</td>
+                <td>Lviv</td>
+              </tr>
+              <tr>
+                <td>JAVASCRIPT</td>
+                <td>FRONT-END development</td>
+                <td>Kharkiv</td>
+              </tr>
+              <tr>
+                <td>IOS</td>
+                <td>IOS winter 2019</td>
+                <td>Kyiv</td>
+              </tr>
+              <tr>
+                <td>DEVOPS</td>
+                <td>DEVOPS spring 2020</td>
+                <td>Dnipro</td>
+              </tr>
+            </table>
+          </section>
+
+          <section id="blockquotes">
+            <h2>Blockquotes</h2>
+            <p>Let’s keep it simple. Italics are good to help set it off from
+              the body text. Be sure to style the citation.</p>
+
+            <blockquote>
+              "So if you want to go fast, if you want to get done quickly,
+              if you want your code to be easy to write, make it easy to read."
+              <br>
+              <a href="#">Robert C. Martin (Uncle Bob)</a>
+            </blockquote>
+            <hr>
+          </section>
+
+          <form action="#" method="post" id="registration">
+            <fieldset>
+              <label for="userName">Username:</label>
+              <input type="text" name="firstname" id="userName">
+            </fieldset>
+            <fieldset>
+              <label for="email">Email:</label>
+              <input type="email" name="email" id="email">
+            </fieldset>
+            <fieldset>
+              <label for="password">Password:</label>
+              <input type="number" name="password" id="password">
+            </fieldset>
+            <fieldset>
+              <textarea rows="4" cols="23"></textarea>
+            </fieldset>
+            <fieldset>
+              <button type="button" name="button">Submit</button>
+            </fieldset>
+          </form>
+
+          <footer>
+            <span>&copy; Copyright Epam Systems</span>
+          </footer>
         </div>
       </div>
     </div>
