--- a/FL12_HW1/homework/index.html
+++ b/FL12_HW1/homework/index.html
@@ -12,7 +12,6 @@
     <div id="main">
       <div id="container">
         <div id="content" role="main">
-
           <section id="home">
             <a href="http://www.epam.com/">
               <img src="logo.png" alt="epam">
@@ -29,9 +28,9 @@
               <a href="#registration"><b>Registration</b></a>
             </nav>
             <hr>
-
             <div>
-              <p>Lorem ipsum dolor sit amet,
+              <p>
+                Lorem ipsum dolor sit amet,
                 <a href="#">test link</a>
                 adipiscing elit.
                 Nullam dignissim convallis est. Quisque aliquam.
@@ -45,9 +44,10 @@
                 <u>Underline.</u>
                 Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam
                 sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.
-                <strong>I am strong.</strong></p>
-
-              <p>Watch out for the abbreviations!
+                <strong>I am strong.</strong>
+              </p>
+              <p>
+                Watch out for the abbreviations!
                 <abbr title="Hyper Text Markup Language">HTML</abbr>
                 and
                 <abbr title="Cascading Style Sheets">CSS</abbr>
@@ -61,17 +61,19 @@
                 <em>filename</em>.
                 <del>The meeting began at 7pm</del>
                 <ins>Let’s make that 6pm.</ins>
-                This <del>text</del> has been struck.</p>
+                This <del>text</del> has been struck.
+              </p>
               <hr>
             </div>
           </section>
 
           <section id="headings">
-            <p>h1 defines the most important heading. h6 defines the least
+            <p>
+              h1 defines the most important heading. h6 defines the least
               important heading. Font-size for h1 is the same as font-size for h2,
               because we have to use only one h1 on the page, and it is commonly
-              used inside header</p>
-
+              used inside header
+            </p>
             <h2>Heading 2</h2>
             <h3>Heading 3</h3>
             <h4>Heading 4</h4>
@@ -89,7 +91,6 @@
               </header>
               <p id="author-description">Article description</p>
             </article>
-
             <h3>Preformatted Text</h3>
             <pre>Text in a <strong>pre</strong> element
 is displayed in a fixed-width
@@ -122,7 +123,6 @@ both           <strong>spaces</strong> and
               </li>
               <li>Headphones</li>
             </ul>
-
             <h2>Ordered Task List</h2>
             <ol>
               <li>Pay the bills</li>
@@ -135,19 +135,15 @@ both           <strong>spaces</strong> and
               </li>
               <li>Enjoy your day</li>
             </ol>
-
             <h3>Definition List</h3>
             <dl>
               <dt>HTML</dt>
               <dd>HTML is the standard markup language to create Web pages</dd>
-
               <dt>CSS</dt>
               <dd>CSS describes how HTML elements are to be displayed</dd>
-
               <dt>JavaScript</dt>
               <dd>JavaScript is a scripting languages, primarily used on the Web.</dd>
             </dl>
-
             <span>Select for learning
               <select>
                 <option value="js">JS</option>
@@ -194,9 +190,10 @@ both           <strong>spaces</strong> and
 
           <section id="blockquotes">
             <h2>Blockquotes</h2>
-            <p>Let’s keep it simple. Italics are good to help set it off from
-              the body text. Be sure to style the citation.</p>
-
+            <p>
+              Let’s keep it simple. Italics are good to help set it off from
+              the body text. Be sure to style the citation.
+            </p>
             <blockquote>
               "So if you want to go fast, if you want to get done quickly,
               if you want your code to be easy to write, make it easy to read."
